--- a/appsscript.json
+++ b/appsscript.json
@@ -1,9 +1,9 @@
 {
-  "timeZone": "America/New_York",
+  "timeZone": "Australia/Sydney",
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8",
   "webapp": {
     "access": "ANYONE",
-    "executeAs": "USER_DEPLOYING"
+    "executeAs": "USER_ACCESSING"
   }
 }
